docs: add documentation Update Opening
